tao chuc nang gio hang

--- a/ASSIGMENT_MVC_ASP/ASSIGMENT_MVC_ASP.csproj
+++ b/ASSIGMENT_MVC_ASP/ASSIGMENT_MVC_ASP.csproj
@@ -126,6 +126,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\GioHangController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoaiSanPhamsController.cs" />
     <Compile Include="Controllers\SanPhamsController.cs" />
@@ -133,6 +134,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\GioHang.cs" />
     <Compile Include="Models\LoaiSanPham.cs" />
     <Compile Include="Models\SanPham.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -174,6 +176,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\GioHang\GioHang.cshtml" />
     <Content Include="Views\LoaiSanPhams\Create.cshtml" />
     <Content Include="Views\LoaiSanPhams\Delete.cshtml" />
     <Content Include="Views\LoaiSanPhams\Details.cshtml" />
